--- a/ui-kalbe/ui-kalbe.csproj
+++ b/ui-kalbe/ui-kalbe.csproj
@@ -228,6 +228,7 @@
     <Content Include="Views\Customer\Edit.cshtml" />
     <Content Include="Views\Customer\Delete.cshtml" />
     <Content Include="Views\Penjualan\Index.cshtml" />
+    <Content Include="Views\Penjualan\Create.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
